--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-a.active {
-    color: rgb(136, 255, 0);
-}
- body {
-    background-color: darkslategrey;
-}
-a.active {
+a {
+    color: rgba(136, 255, 0, 1);
+    transition: 0.5s;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    transition: 1s;
-}
+    }
+    
+    a:hover {
+    font-size: xx-large;
+    color: rgba(0, 0, 0, 0.815);
+    }
+
+    body {
+        background-color: darkslategrey;
+    
+    }
