--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 a {
     color: rgba(136, 255, 0, 1);
-    transition: 0.5s;
+    transition: 0.4s;
     font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     }
     
