--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ a {
     color: rgba(136, 255, 0, 1);
     transition: 0.4s;
     font-size: large;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
     text-decoration: none;
     }
     
