--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 a {
-    color: rgba(136, 255, 0, 1);
-    transition: 0.4s;
+    color: rgb(136, 255, 0);
+    transition: 0.5s;
     font-size: large;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     }
     
     a:hover {
     font-size: xx-large;
-    color: rgba(0, 0, 0, 0.815);
+    color: rgba(136, 255, 0);
     }
-
+    
+    .active {
+        background-color:#000000;
+        font-size: x-large;
+    }
+    
     body {
         background-color: darkslategrey;
     
