--- a/style.css
+++ b/style.css
@@ -1,22 +1,55 @@
+body {
+    background-color: darkslategrey;
+}
+
 a {
-    color: rgb(136, 255, 0);
-    transition: 0.5s;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
+   text-decoration: none;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: #333;
+  }
+li {
+    list-style-type: none;
+    float: left;
+  }
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    }
-    
-    a:hover {
-    font-size: xx-large;
-    color: rgba(136, 255, 0);
-    }
-    
-    .active {
-        background-color:#000000;
-        font-size: x-large;
-    }
-    
-    body {
-        background-color: darkslategrey;
-    
-    }
+  }
+li a:hover:not(.active) {
+    background-color: #111;
+  }
+.active {
+    background-color: #04AA6D;
+  }
+
+.orarend td {
+    border: solid 1px #000; 
+}
+
+.pizza td {
+    border: none; 
+}
+
+.ollist li {
+    float: none;
+    list-style-type: decimal;
+}
+
+.ullist  li {
+    padding-left: 25px;
+    float: none;
+    list-style-position:inside;
+    color: #0eed00;
+    list-style-type:disc;
+    background-color: darkslategrey;
+}
+
+
