--- a/style.css
+++ b/style.css
@@ -55,3 +55,6 @@ li a:hover:not(.active) {
     list-style-type:disc;
     background-color: darkslategrey;
 }
+table, th, td {
+  border: 1px solid black;
+}
